--- a/WebAPI/QuanLyBanHang_API/QuanLyBanHang_API/appsettings.json
+++ b/WebAPI/QuanLyBanHang_API/QuanLyBanHang_API/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "https_port": 443,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost; port=3306; uid=abc; password=seng123456;
+  }
 }
